--- a/config/locales/simple_form.zh-cn.yml
+++ b/config/locales/simple_form.zh-cn.yml
@@ -20,6 +20,27 @@ zh-cn:
         description: '描述'
         stage: '阶段'
         where1: '地点'
+        contacts:
+          address: '联系地址'
+          phone: '电话'
+          qq: 'QQ'
+          weixin: '微信'
+          weibo: '微博'
+        members:
+          avatar: '上传头像'
+          name: '姓名'
+          title: '职位'
+          description: '个人简介'
+        money_requires:
+          money: '融资金额'
+          share: '拟让股份'
+          description: '融资计划简述'
+        person_requires:
+          title: '招聘职位'
+          pay: '薪资'
+          stock: '股权'
+          option: '期权'
+          description: '补充说明'
     hints:
       defaults:
         username: 'User name to sign in.'
