test full about project

--- a/config/locales/simple_form.zh-cn.yml
+++ b/config/locales/simple_form.zh-cn.yml
@@ -51,7 +51,6 @@ zh-cn:
         oneword: '快速介绍你的产品, 如为广大网民提供搜索入口'
         description: '介绍产品的特色, 差异化, 为用户提供的价值'
         members:
-          avatar: '上传头像'
-          name: '姓名'
-          title: '职位'
-          description: '个人简介'
+          avatar: '使用 200x200 的头像'
+          title: '例如: CTO'
+          description: '例如: 1991年毕业于北京大学信息管理专业，随后赴美国布法罗纽约州立大学完成计算机科学硕士学位。在搜索引擎发展初期，李彦宏作为全球最早研究者之一，最先创建了ESP技术，并将它成功的应用于INFOSEEK/GO. COM的搜索引擎中。GO. COM的图像搜索引擎是他的另一项极具应用价值的技术创新。'
