去掉对中文的依赖, 全部改为 i18n 翻译的方式

--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -1,3 +1,15 @@
 'zh-CN':
   ago: 前
   since: 来自
+  project:
+    stages:
+      idea: '概念中'
+      developing: '开发中'
+      online: '已上线'
+      gained: '已盈利'
+  member:
+    roles:
+      founder: '创始人'
+      member: '团队成员'
+      partner: '合作者'
+    
