--- a/config/locales/simple_form.zh-cn.yml
+++ b/config/locales/simple_form.zh-cn.yml
@@ -22,6 +22,7 @@ zh-CN:
       money_require: &money_require
         money: '融资金额'
         share: '拟让股份'
+        deadline: '截止期'
         description: '融资计划简述'
       person_require: &person_require
         title: '招聘职位'
