--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -16,3 +16,8 @@
     investor_types:
       person: '个人'
       organization: '机构'
+  investidea:
+    coin_types:
+      cny: '人民币'
+      usd: '外币'
+      cny_and_usd: '人民币+外币'
