--- a/config/locales/activerecord.zh-cn.yml
+++ b/config/locales/activerecord.zh-cn.yml
@@ -24,8 +24,10 @@
     models:
     attributes:
       user:
-        email: "电子邮箱"
-        name: "用户名"
+        email: "登录邮箱"
+        name: "真实姓名"
+        avatar: "个人头像"
+        description: "个人介绍"
         password: "密码"
         current_password: '当前密码'
         password_confirmation: "确认密码"
