explore all page fix

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,6 +52,7 @@ en:
     all:
       all: All - Find
       industry: 'Category:'
+      city: 'City:'
       all_industries: 'All'
       all_industries_for_small: 'All Categories'
       all_cities: 'All'
