--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -22,31 +22,31 @@
     admin: 后台管理
     logout: 退出
   start-page:
-    new_project: Publish Your Project
-    hot_project: Hot Projects
-    all_project: See All Projects
-    hot_investor: Hot Investors
-    all_investor: See All Investors
-    none: 'None'
-    vacancy: Vacancy
+    new_project: 发布你的项目
+    hot_project: 热门项目
+    all_project: 查看所有项目
+    hot_investor: 热门投资人
+    all_investor: 查看所有投资人
+    none: '无'
+    vacancy: 空缺中
     project:
-      owner: 'Founder'
-      team: 'Team'
-      member: 'members'
-      leader: 'Invest Leader'
-    investment_case: 'Investment Cases'
-    startup_job: Startup Jobs
-    all_job: See All Jobs
+      owner: '创始人'
+      team: '团队'
+      member: '成员'
+      leader: '领投人'
+    investment_case: '投资案例'
+    startup_job: 创业工作
+    all_job: 查看所有工作
     job:
-      salary: 'Salary'
-      title: 'Title'
-      option: 'Option'
+      salary: '月薪'
+      title: '职位'
+      option: '期权'
   explore:
     index:
       find: 发现
       no_content: 暂无编辑推荐项目
       all_project: 查看所有项目
-    _head:
+    head:
       recommend: '推荐'
       trend    : '趋势'
       all      : '所有'
@@ -132,6 +132,7 @@
       type_all: 全部
       type_small_all: 全部类别
       search_placeholder: '输入投资人信息, 如: 张三'
+      search: '投资人搜索'
       no_content: 没有搜索结果
     investor:
       deliver_button: '投递项目'
@@ -162,10 +163,10 @@
 
   common:
     _project_block_item:
-      owner: Founder
-      team: Team
-      member: members
-      leader: Invest leader
+      owner: 创始人
+      team: 团队
+      member: 成员
+      leader: 领投人
   project:
     stages:
       idea: '概念中'
